--- a/React笔记/docs/.vitepress/guide/ReactBasics/基础知识/14-生命周期/14.3-类组件生命周期-销毁.md
+++ b/React笔记/docs/.vitepress/guide/ReactBasics/基础知识/14-生命周期/14.3-类组件生命周期-销毁.md
@@ -2,7 +2,7 @@
 
 ### 类组件生命周期-销毁
 
-> 在组件被销毁的时候 会触发这个周期  可以在这个周期里面做一些 清除定时器 解绑Dom事件 等等
+>**componentWillUnmount：**  在组件被销毁的时候 会触发这个周期  可以在这个周期里面做一些 清除定时器 解绑Dom事件 等等
 
 ```
 import React, { Component } from "react";
